--- a/src/app/components/reporte/reporte.component.css
+++ b/src/app/components/reporte/reporte.component.css
@@ -25,3 +25,11 @@ footer {
     width: 480px;
     text-align: center;
 }
+
+h2 {
+    text-align: center;
+}
+
+#tabla {
+    padding-left: 33%;
+}
