--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,43 +1,16 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" routerLink="inicio">Centro LEO</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-        aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Centro LEO</title>
+    <link href="https://fonts.googleapis.com/css?family=Cookie|Great+Vibes|Old+Standard+TT" rel="stylesheet">
+</head>
+<body>
+        <router-outlet></router-outlet>
+</body>
+</html>
 
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav mr-auto"></ul>
-        <form class="form-inline my-2 my-lg-0">
-            <ul class="navbar-nav mr-auto">
-                <li class="nav-item">
-                    <a class="nav-link" routerLink="login">Iniciar Sesión</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" routerLink="registro">Registrarse</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" routerLink="seguimientotutoria">Seguimiento de Tutorias</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" routerLink="observacionestutoria">Observaciones de Tutorias</a>
-                </li>
-                <li class="nav-item">
-                        <a class="nav-link" routerLink="reporte">Reportes</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" routerLink="materia">Adicionar Materia</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" routerLink="estudiante">Adicionar estudiante</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link"  (click)="logout()" style="cursor:pointer;" >Cerrar Sesión</a>
-                    </li>
-            </ul>
-        </form>
-    </div>
-</nav>
-
-<router-outlet></router-outlet>
 
  
