--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,3 +1,22 @@
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <a class="navbar-brand" routerLink="inicio">Centro LEO</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+      aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+  </button>
+
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav mr-auto"></ul>
+      <form class="form-inline my-2 my-lg-0">
+          <ul class="navbar-nav mr-auto">
+              <li class="nav-item">
+                  <a class="nav-link" routerLink="login">Iniciar Sesión</a>
+              </li>
+          </ul>
+      </form>
+  </div>
+</nav>
+
 <div id="contenedor">
     <div class="login">
         <form id="formulario" (ngSubmit)="iniciarSesion()">
