--- a/src/app/components/seguimientotutoria/seguimientotutoria.component.html
+++ b/src/app/components/seguimientotutoria/seguimientotutoria.component.html
@@ -1,20 +1,52 @@
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <a class="navbar-brand" routerLink="inicio">Centro LEO</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+      aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+  </button>
+
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav mr-auto"></ul>
+      <form class="form-inline my-2 my-lg-0">
+          <ul class="navbar-nav mr-auto">
+                  <li class="nav-item">
+                    <a class="nav-link"  (click)="logout()" style="cursor:pointer;" >Cerrar Sesión</a>
+                </li>
+          </ul>
+      </form>
+  </div>
+</nav>
+
 <div class="row">
 
   <div class="col-sm-3" id="menu">
-
-    <img src="/../assets/img/foto.png" height="200" style="background: gainsboro; border: none; padding-left: 20%;padding-top: 5%;">
+      <img src="/../assets/img/foto.png" class="img-fluid" alt="Responsive image" height="200" style="background: gainsboro; border: none; padding-left: 15%;padding-top: 5%; padding-right: 15%; ">
     <br/>
     <br/>
-    <div class="nav flex-column nav-pills" id="v-pills-tab" role="tablist" aria-orientation="vertical">
+    <div class="nav flex-column nav-pills" id="v-pills-tab" role="tablist" aria-orientation="vertical" *ngIf="usuario.tipo_usuario_id===2">
       <a class="nav-link active" id="v-pills-home-tab" data-toggle="pill" href="#v-pills-home" role="tab" aria-controls="v-pills-home"
-        aria-selected="true">Seguimiento de Tutoría</a>
+        aria-selected="true" (click)="seguimiento()" style="cursor:pointer;" >Seguimiento de Tutoría</a>
       <a class="nav-link" id="v-pills-profile-tab" data-toggle="pill" href="#v-pills-profile" role="tab" aria-controls="v-pills-profile"
-        aria-selected="false">Observaciones de Tutoría</a>
+        aria-selected="false" (click)="observaciones()" style="cursor:pointer;" >Observaciones de Tutoría</a>
       <a class="nav-link" id="v-pills-messages-tab" data-toggle="pill" href="#v-pills-messages" role="tab" aria-controls="v-pills-messages"
-        aria-selected="false">Reportes de Desempeño</a>
+        aria-selected="false" (click)="adicionarMateria()" style="cursor:pointer;">Adicionar una Materia</a>
       <a class="nav-link" id="v-pills-settings-tab" data-toggle="pill" href="#v-pills-settings" role="tab" aria-controls="v-pills-settings"
-        aria-selected="false">Reportes de Asistencia</a>
+        aria-selected="false" (click)="registrarEstudiante()" style="cursor:pointer;" >Registrar un estudiante</a>
+      <a class="nav-link" id="v-pills-settings-tab" data-toggle="pill" href="#v-pills-settings" role="tab" aria-controls="v-pills-settings"
+        aria-selected="false" (click)="registrarTutor()" style="cursor:pointer;">Registrar un tutor</a>
+       <a class="nav-link" id="v-pills-settings-tab" data-toggle="pill" href="#v-pills-settings" role="tab" aria-controls="v-pills-settings"
+        aria-selected="false" (click)="reportes()" style="cursor:pointer;">Reportes</a>
     </div>
+    <div class="nav flex-column nav-pills" id="v-pills-tab" role="tablist" aria-orientation="vertical" *ngIf="usuario.tipo_usuario_id===1">
+        <a class="nav-link active" id="v-pills-home-tab" data-toggle="pill" href="#v-pills-home" role="tab" aria-controls="v-pills-home"
+          aria-selected="true" (click)="seguimiento()" style="cursor:pointer;" >Seguimiento de Tutoría</a>
+        <a class="nav-link" id="v-pills-profile-tab" data-toggle="pill" href="#v-pills-profile" role="tab" aria-controls="v-pills-profile"
+          aria-selected="false" (click)="observaciones()" style="cursor:pointer;" >Observaciones de Tutoría</a>
+        <a class="nav-link" id="v-pills-messages-tab" data-toggle="pill" href="#v-pills-messages" role="tab" aria-controls="v-pills-messages"
+          aria-selected="false" (click)="adicionarMateria()" style="cursor:pointer;">Adicionar una Materia</a>
+        <a class="nav-link" id="v-pills-settings-tab" data-toggle="pill" href="#v-pills-settings" role="tab" aria-controls="v-pills-settings"
+          aria-selected="false" (click)="registrarEstudiante()" style="cursor:pointer;" >Registrar un estudiante</a>
+    </div> 
   </div>
 
   <div class="col-sm-9" id="cuerpo">
@@ -25,6 +57,9 @@
     <form id="formulario" (ngSubmit)="addAsistencia()">
       <div class="container">
           <div class="col-sm-12">
+            <h2>Seguimiento de tutorías</h2>
+            <h3>Centro LEO</h3>
+            <br/>
               <div class="row">
                 <div class="col-sm-6">
                   <div class="form-group">
